Re-implement visit download

--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -1,69 +1,25 @@
-<div class = "download">
-
-<script>
-    function download() {
-        var table = document.getElementById("visitTable");
-        var data = ""; //requires some initiation or has an annoying "undefined" in the first cell
-        
-        //convert object to array
-        //code shell courtesy of https://stackoverflow.com/questions/3072233/getting-value-from-table-cell-in-javascript-not-jquery
-        for (var rowIndex = 0, rowLength = table.rows.length; rowIndex < rowLength; rowIndex++) {
-            for (var cellIndex = 0, cellLength = table.rows[rowIndex].cells.length; cellIndex < cellLength; cellIndex++) {
-                data += table.rows[rowIndex].cells.item(cellIndex).innerHTML.trim() + ", "; //append contents of cell and add comma for new cell
-            }
-            //new row
-            data += "\n";
-        }
-        
-        //convert into file and URL and pass URL to download button for execution
-        var file = new Blob([data], {type: "text/csv"});
-        var url = URL.createObjectURL(file);
-        var link = document.getElementById("link");
-        link.setAttribute("href", url);
-}
-function filterName(x) {
-  // Declare variables
-  var input, filter, table, tr, td, i, txtValue;
-  input = document.getElementById("visitSearch");
-  filter = input.value.toUpperCase();
-  table = document.getElementById("visitTable");
-  tr = table.getElementsByTagName("tr");
-
-  // Loop through all table rows, and hide those who don't match the search query
-  for (i = 0; i < tr.length; i++) {
-    td = tr[i].getElementsByTagName("td")[x];
-    if (td) {
-      txtValue = td.textContent || td.innerText;
-      if (txtValue.toUpperCase().indexOf(filter) > -1) {
-        tr[i].style.display = "";
-      } else {
-        tr[i].style.display = "none";
-      }
-    }
-  }
-}
-</script>
-
 <style>
     table {
-      border-collapse: collapse;
-      width: 100%;
+        border-collapse: collapse;
+        width: 100%;
     }
-    
-    th, td {
-      text-align: left;
-      padding: 8px;
-    }
-    
-    tr:nth-child(even) {background-color: #f2f2f2;}
-    </style>
 
-<!-- Populate table -->
+    th,
+    td {
+        text-align: left;
+        padding: 8px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #f2f2f2;
+    }
+
+</style>
+
+<div class="w3-center" style="padding-bottom: 18px;">
+    <a href="/visit/download">Download all visit data</a>
+</div>
 <div class="w3-table-all w3-center" style="overflow:scroll;">
-    <a id="link" download="visits.csv">
-        <button onclick="download()" class = "button downloadButton">Download this view</button>
-    </a>
-    <input type="text" id="visitSearch" onkeyup="filterName(2)" placeholder="Search for a Name..">
     <table>
         <thead>
             <tr>
@@ -72,54 +28,53 @@ function filterName(x) {
                 <th>Check In</th>
                 <th>Check Out</th>
                 <th>Visit Length</th>
-                <th>Visit Estimated?</th>
+                <th>Estimated Length?</th>
                 <th>Purpose of Visit</th>
                 <th>Purpose Achieved?</th>
                 <th>Comments</th>
-                <th>Used Tutors</th>
-                <th>tutorCourses</th>
+                <th>Used Tutors?</th>
+                <th>Tutor Courses</th>
             </tr>
         </thead>
 
         <% if(records) {records.forEach(function(visit) { %>
-            <tbody>
-                <tr>
-                    <td>
-                        <%= visit.id %>
-                    </td>
-                    <td>
-                        <%= visit.student.firstName + " " + visit.student.lastName %>
-                    </td>
-                    <td>
-                        <%= visit.checkInTime %>
-                    </td>
-                    <td>
-                        <%= visit.checkOutTime %>
-                    </td>
-                    <td>
-                        <%= visit.length %>
-                    </td>
-                    <td>
-                        <%= visit.isLengthEstimated %>
-                    </td>
-                    <td>
-                        <%= visit.purpose %>
-                    </td>
-                    <td>
-                        <%= visit.purposeAchieved %>
-                    </td>
-                    <td>
-                        <%= visit.comment %>
-                    </td>
-                    <td>
-                        <%=visit.usedTutor %>
-                    </td>
-                    <td>
-                        <%= visit.tutorCourses %>
-                    </td>
-                </tr>
-            </tbody>
+        <tbody>
+            <tr>
+                <td>
+                    <%= visit.id %>
+                </td>
+                <td>
+                    <%= visit.student.firstName + " " + visit.student.lastName %>
+                </td>
+                <td>
+                    <%= visit.checkInTime %>
+                </td>
+                <td>
+                    <%= visit.checkOutTime %>
+                </td>
+                <td>
+                    <%= visit.length %>
+                </td>
+                <td>
+                    <%= visit.isLengthEstimated %>
+                </td>
+                <td>
+                    <%= visit.purpose %>
+                </td>
+                <td>
+                    <%= visit.purposeAchieved %>
+                </td>
+                <td>
+                    <%= visit.comment %>
+                </td>
+                <td>
+                    <%=visit.usedTutor %>
+                </td>
+                <td>
+                    <%= visit.tutorCourses %>
+                </td>
+            </tr>
+        </tbody>
         <% }); }%>
     </table>
-</div>
 </div>
