Improve error info

--- a/views/404.html
+++ b/views/404.html
@@ -2,34 +2,34 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>
-    Naylor Learning Center
-  </title>
+    <meta charset="utf-8">
+    <title>
+        Naylor Learning Center
+    </title>
 
-  <link rel="icon" type="image/x-icon" href="/DE_Logo.ico" />
+    <link rel="icon" type="image/x-icon" href="/DE_Logo.ico" />
 
-  <!-- Viewport mobile tag for sensible mobile support -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Viewport mobile tag for sensible mobile support -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <%/* If you want to discourage search engines from indexing this site, uncomment the following line: */%>
+    <%/* If you want to discourage search engines from indexing this site, uncomment the following line: */%>
     <%/* <meta name="robots" content="noindex"> */%>
 
 
     <!--STYLES-->
     <link rel="stylesheet" href="/styles/w3-theme-red.css">
     <link rel="stylesheet" href="/styles/w3.css">
-    <!--STYLES END--> 
+    <!--STYLES END-->
 </head>
 
 
 <body>
-  <div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black w3-margin" style="width:50%">
-  <h3>ERROR</h3>
-  <h1 style="font-size:1000%;">404</h1>
-  <h3>PAGE NOT FOUND</h3>
-  <p>If problem presists, please contact system administrator.</p>
-  </div>
+    <div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black w3-margin"
+        style="width:50%">
+        <h1>404 Not Found</h1>
+        <p>You have requested a resource that does not exist.</p>
+        <p>If you think that it should, please seek support from help@dewv.net.</p>
+    </div>
 </body>
 
 </html>
