--- a/views/pages/browser/registerForm.html
+++ b/views/pages/browser/registerForm.html
@@ -1,24 +1,28 @@
 <script type="text/javascript">
-function validateForm() {
-    let d = new Date();
-    d.setTime(d.getTime() + (365 * 24 * 60 * 60 * 1000));
-    document.cookie = "location=" + register.location.value + "; expires=" + d.toUTCString() + "; path=/";
-}
+    function validateForm() {
+        let d = new Date();
+        d.setTime(d.getTime() + (365 * 24 * 60 * 60 * 1000));
+        document.cookie = "location=" + register.location.value + "; expires=" + d.toUTCString() + "; path=/";
+    }
+
 </script>
 
-<div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black" style="width:25%">
-<form name="register" onsubmit="return validateForm()" method="get" action="/visit">
-    <h1>Register this Browser</h1> 
-    <div class="instructions">
-    <p>This form will register this browser to permit NLC attendance tracking. When a student checks in with this browser, their visit will be marked with the location that you enter below:</p>
-    </div>
-    <br>
-    <label for="location">Location Name:</label>
-    <input type="text" autofocus name="location" maxlength="255" required>
-    <br>
-    <br>
-    <button class="w3-btn w3-white" id="submitButton" type="submit">Submit</button>
-    <br>
-    <br>
-</form>
+<div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black"
+    style="width:25%">
+    <form name="register" onsubmit="return validateForm()" method="get" action="/visit">
+        <h1>Register Browser</h1>
+        <div class="instructions">
+            <p>Submitting this form enables this <em>browser</em> to track NLC visits for a period of one year.</p>
+            <p>When a student checks in with this browser, their visit will be marked with the location that you enter
+                below.</p>
+        </div>
+        <br>
+        <label for="location">Location Name:</label>
+        <input type="text" autofocus name="location" maxlength="255" required>
+        <br>
+        <br>
+        <button class="w3-btn w3-white" id="submitButton" type="submit">Submit</button>
+        <br>
+        <br>
+    </form>
 </div>
