--- a/views/pages/staff/updateForm.html
+++ b/views/pages/staff/updateForm.html
@@ -3,7 +3,7 @@
     <form method="POST" action="<%= action %>">
 
         <div>
-            <h2>User Profile</h2>
+            <h2>Staff Profile</h2>
         </div>
 
         <div class="w3-margin">
