--- a/views/pages/student/updateForm.html
+++ b/views/pages/student/updateForm.html
@@ -1,8 +1,8 @@
 <div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black"
-    style="width:25%">
+    style="width:35%">
     <form method="POST" action="<%= action %>">
         <div>
-            <h2>User Profile</h2>
+            <h2>Student Profile</h2>
         </div>
         <div class="w3-margin">
             <div>
