--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -8,6 +8,7 @@
     </title>
 
     <link rel="icon" type="image/x-icon" href="/DE_Logo.ico" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
