--- a/views/pages/major/index.html
+++ b/views/pages/major/index.html
@@ -1,43 +1,42 @@
-
-
-
-<div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black w3-margin" style="overflow-x:auto; width:50%;">
+<div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black w3-margin"
+    style="overflow-x:auto; width:50%;">
 
     <div>
         <h2>Majors</h2>
-        <a class="w3-btn w3-white w3-padding-small" href="/major/new" >Add New Major</a>
+        <a class="w3-btn w3-white w3-padding-small" href="/major/new">Add New Major</a>
     </div>
 
     <table class="w3-table" id="majorTable">
         <thead>
             <tr>
                 <th class="w3-center">Major</th>
-                <th class="w3-center">Discontinued?</th>
+                <th class="w3-center">Discontinued</th>
             </tr>
         </thead>
 
         <% let count = 0 %>
         <% if(records) {records.forEach(function(major) { count++ %>
-            <tbody>
-                <tr>
-                    <td class="w3-center">
-                        <%= major.name %>
-                    </td>
-                    <td>
-                        <form class="w3-center" method="POST" action="/major/<%= major.id %>">
-                            <% if(major.discontinued === "Yes") { %>
-                                <input type="hidden" name="discontinued" value="No"/>
-                                <button class="w3-btn w3-white w3-padding-small" type="submit" id="Yes<%= count %>"><img alt="Yes" src="/images/check.png" /></button>
-                            <% } else { %>
-                                <input type="hidden" name="discontinued" value="Yes"/>
-                                <button class="w3-btn w3-white w3-padding-small" type="submit" id="No<%= count %>"><img alt="No" src="/images/x.png" /></button>
-                            <% } %>
-                        </form>
-                    </td>
-                </tr>
-            </tbody>
+        <tbody>
+            <tr>
+                <td class="w3-center">
+                    <%= major.name %>
+                </td>
+                <td>
+                    <form class="w3-center" method="POST" action="/major/<%= major.id %>">
+                        <% if(major.discontinued === "Yes") { %>
+                        <input type="hidden" name="discontinued" value="No" />
+                        <button class="w3-red" style="border: none;" type="submit" id="Yes<%= count %>"><i
+                                class="fa fa-check-square" style="font-size: 150%; color: white"></i></button>
+                        <% } else { %>
+                        <input type="hidden" name="discontinued" value="Yes" />
+                        <button class="w3-red" style="border: none;" type="submit" id="No<%= count %>">
+                            <i class="fa fa-square" style="font-size: 150%; color:white;"></i></button>
+                        <% } %>
+                    </form>
+                </td>
+            </tr>
+        </tbody>
         <% }); }%>
     </table>
 
 </div>
-
