--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -1,18 +1,19 @@
 <% try { %>
-<script src="/javascripts/formCheck.js"></script>
-<div class="w3-row w3-container w3-third w3-display-middle w3-center w3-border w3-red w3-round w3-border-black" style="width:25%">
-<h2>Check In</h2>
+<div class="w3-row w3-container w3-third w3-display-middle w3-center w3-border w3-red w3-round w3-border-black"
+    style="width:25%">
+    <h2>Check In</h2>
 
-<form method="POST" action="<%= action %>">
-    
-    <div class="formPiece">
-        <label id="visitPurposeQuestion">What is your goal/purpose for this visit?</label>
-        <textarea id="purpose" name="purpose"  rows="10" cols="30" autofocus maxlength="255" required value="<%= formData.purpose %>"></textarea>
-    </div>
-    <div class="button w3-padding-16">
-        <button class="w3-btn w3-white" id="submitButton" type="submit">Submit</button>
-    </div>
+    <form method="POST" action="<%= action %>">
 
-</form>
+        <div class="formPiece">
+            <label id="visitPurposeQuestion">What is your goal/purpose for this visit?</label>
+            <div style="padding-top: 15px;"></div>
+            <textarea id="purpose" name="purpose" rows="10" cols="30" autofocus maxlength="255" required></textarea>
+        </div>
+        <div class="button w3-padding-16">
+            <button class="w3-btn w3-white" id="submitButton" type="submit">Submit</button>
+        </div>
+
+    </form>
 </div>
 <% } catch(error) { console.log(`EJS rendering error: ${error}`); }; %>
