--- a/views/pages/browser/registerForm.html
+++ b/views/pages/browser/registerForm.html
@@ -9,7 +9,8 @@
 
 <div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black"
     style="width:25%">
-    <form name="register" onsubmit="return validateForm()" method="get" action="/visit">
+    <form name="register" onsubmit="return validateForm()" method="get"
+        action="<%= baseUrl %>/visit">
         <h1>Register Browser</h1>
         <div class="instructions">
             <p>Submitting this form enables this <em>browser</em> to track NLC visits for a period of one year.</p>
