--- a/views/pages/visit/createForm.html
+++ b/views/pages/visit/createForm.html
@@ -3,7 +3,7 @@
     style="width:25%">
     <h2>Check In</h2>
 
-    <form method="POST" action="<%= action %>">
+    <form method="POST" action="<%= baseUrl + action %>">
 
         <div class="formPiece">
             <label id="visitPurposeQuestion">What is your goal/purpose for this visit?</label>
