--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -17,7 +17,7 @@
 </style>
 
 <div class="w3-center" style="padding-bottom: 18px;">
-    <a href="/visit/download">Download all visit data</a>
+    <a href="<%= baseUrl %>/visit/download">Download all visit data</a>
 </div>
 <div class="w3-table-all w3-center" style="overflow:scroll;">
     <table>
