--- a/views/pages/authentication/loginForm.html
+++ b/views/pages/authentication/loginForm.html
@@ -1,6 +1,6 @@
 <div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black"
     style="width:30%">
-    <form method="POST" action="/login">
+    <form method="POST" action="<%= baseUrl %>/login">
         <h1>Davis &amp; Elkins College</h1>
         <h2>Naylor Learning Center</h2>
 
