--- a/views/pages/staff/updateForm.html
+++ b/views/pages/staff/updateForm.html
@@ -1,6 +1,6 @@
 <div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black"
     style="width:25%">
-    <form method="POST" action="<%= action %>">
+    <form method="POST" action="<%= baseUrl + action %>">
 
         <div>
             <h2>Staff Profile</h2>
