--- a/views/pages/visit/updateForm.html
+++ b/views/pages/visit/updateForm.html
@@ -1,6 +1,6 @@
 <% try { %>
 
-<form method="POST" action="<%= action %>">
+<form method="POST" action="<%= baseUrl + action %>">
     <div class="w3-container w3-thrid w3-display-middle w3-center w3-border w3-red w3-round w3-border-black">
         <div>
             <h2>Check Out</h2>
