--- a/views/500.html
+++ b/views/500.html
@@ -17,8 +17,7 @@
 
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/w3-theme-red.css">
-    <link rel="stylesheet" href="/styles/w3.css">
+    <link rel="stylesheet" href="/nlc_attendance/min/production.min.css">
     <!--STYLES END-->
 </head>
 
