--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -39,8 +39,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/w3-theme-red.css">
-    <link rel="stylesheet" href="/styles/w3.css">
+    <link rel="stylesheet" href="/nlc_attendance/min/production.min.css">
     <!--STYLES END-->
 </head>
 
@@ -62,8 +61,8 @@
 
     <% if ( session.role === "student" ) { %>
     <div class="topnav w3-bar w3-red w3-mobile">
-        <a href="/student/<%= session.userId %>/edit" class="w3-bar-item w3-button">Profile</a>
-        <a href="/logout" class="w3-bar-item w3-button">Log out</a>
+        <a href="<%= baseUrl %>/student/<%= session.userId %>/edit" class="w3-bar-item w3-button">Profile</a>
+        <a href="<%= baseUrl %>/logout" class="w3-bar-item w3-button">Log out</a>
     </div>
     <%- include("../include/logoutTimer.html"); -%>
     <% } %>
@@ -112,7 +111,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -156,8 +155,7 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/js/logoutTimer.js"></script>
-    <script src="/js/preventMultiSubmit.js"></script>
+    <script src="/nlc_attendance/min/production.min.js"></script>
     <!--SCRIPTS END-->
 
     <% if (typeof session.role !== "undefined" && session.role === "student") { %>
