--- a/views/pages/browser/registerForm.html
+++ b/views/pages/browser/registerForm.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script>
     function validateForm() {
         let d = new Date();
         d.setTime(d.getTime() + (365 * 24 * 60 * 60 * 1000));
@@ -9,11 +9,10 @@
 
 <div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black"
     style="width:25%">
-    <form name="register" onsubmit="return validateForm()" method="get"
-        action="<%= baseUrl %>/visit">
+    <form name="register" method="get" action="<%= baseUrl %>/visit">
         <h1>Register Browser</h1>
         <div class="instructions">
-            <p>Submitting this form enables this <em>browser</em> to track NLC visits for a period of one year.</p>
+            <p>Submitting this form enables <em>this browser</em> to track NLC visits for a period of one year.</p>
             <p>When a student checks in with this browser, their visit will be marked with the location that you enter
                 below.</p>
         </div>
@@ -22,7 +21,7 @@
         <input type="text" autofocus name="location" maxlength="255" required>
         <br>
         <br>
-        <button class="w3-btn w3-white" id="submitButton" type="submit">Submit</button>
+        <button class="w3-btn w3-white" id="submitButton" type="submit" onclick="return validateForm()">Submit</button>
         <br>
         <br>
     </form>
