Fix banner fade out

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -37,15 +37,9 @@
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
     -->
-    <style>
-        .animate-fade-out {
-            animation-fill-mode: forwards;
-            animation-duration: 15s;
-        }
-
-    </style>
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/animate-fade-out.css">
     <link rel="stylesheet" href="/styles/w3-theme-red.css">
     <link rel="stylesheet" href="/styles/w3.css">
     <!--STYLES END-->
@@ -77,7 +71,7 @@
     <% } %>
 
     <% if (typeof session.banner !== "undefined") { %>
-    <div class="w3-panel w3-green w3-display-container w3-animate-opacity animate-fade-out">
+    <div class="w3-panel w3-green w3-display-container animate-fade-out">
         <span onclick="this.parentElement.style.display='none'" class="w3-button w3-display-topright">&times;</span>
         <p><%= session.banner %></p>
     </div>
