--- a/views/pages/sport/createForm.html
+++ b/views/pages/sport/createForm.html
@@ -1,7 +1,6 @@
-<form class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black w3-margin"
-    style="width:25%" method="POST" action="<%= baseUrl + action %>">
+<form class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black w3-margin" style="width:25%" method="POST" action="<%= baseUrl + action %>">
 
-    <h2>Add A <%= season %> Sport</h2>
+    <h2>Add A Sport</h2>
 
     <div class="w3-input w3-border-0">
         <label for="name" value="name">Sport's Name</label>
