--- a/views/pages/student/updateForm.html
+++ b/views/pages/student/updateForm.html
@@ -1,5 +1,4 @@
-<div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black"
-    style="width:35%">
+<div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black" style="width:35%">
     <form method="POST" action="<%= baseUrl + action %>">
         <div>
             <h2>Student Profile</h2>
@@ -7,14 +6,12 @@
         <div class="w3-margin">
             <div>
                 <label for="firstName" value="First Name">*First name</label>
-                <input class="w3-input" id="firstName" name="firstName" type="text" placeholder="First Name" autofocus
-                    maxlength="255" required value="<%= formData.firstName %>">
+                <input class="w3-input" id="firstName" name="firstName" type="text" placeholder="First Name" autofocus maxlength="255" required value="<%= formData.firstName %>">
             </div>
 
             <div>
                 <label for="lastName" value="Last Name">*Last name</label>
-                <input class="w3-input" id="lastName" name="lastName" type="text" required
-                    value="<%= formData.lastName %>">
+                <input class="w3-input" id="lastName" name="lastName" type="text" required value="<%= formData.lastName %>">
             </div>
         </div>
         <div class="w3-select w3-border-0">
@@ -38,13 +35,13 @@
         </div>
 
         <div class="w3-select w3-border-0">
-            <label for="fallSport" class="sports">Fall sport</label>
-            <%- fallSport %>
+            <label for="sportOne" class="sports">Sport 1</label>
+            <%- sportOne %>
         </div>
 
         <div class="w3-select w3-border-0">
-            <label for="springSport" id="springSports" class="sports">Spring sport</label>
-            <%- springSport %>
+            <label for="sportTwo" class="sports">Sport 2</label>
+            <%- sportTwo %>
         </div>
 
         <div class="w3-select w3-border-0">
