--- a/views/404.html
+++ b/views/404.html
@@ -17,7 +17,9 @@
 
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/nlc_attendance/min/production.min.css">
+    <link rel="stylesheet" href="/styles/animate-fade-out.css">
+    <link rel="stylesheet" href="/styles/w3-theme-red.css">
+    <link rel="stylesheet" href="/styles/w3.css">
     <!--STYLES END-->
 </head>
 
